[package]
name = "df_captcha"
version = "0.1.0"
authors = ["sudhanshu"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-test = "0.3"
wasm-bindgen = "0.2.84"
sha2 = "0.10.8"
base64 = "0.13.0"
js-sys = "0.3.69"
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] } 

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true